--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   </div>
 </nav>
 <div class="container">
+  <app-add-listing-form></app-add-listing-form>
   <app-crib-listing></app-crib-listing>
 </div>
   
